...
    <string name="action_update">Update</string>

    <string name="action_changeprofile">Change Profile Photo</string>

    <string name="email">Email</string>

    <string name="height">Height (in cms)</string>

    <string name="weight">Weight (in lbs)</string>

    <string name="age">Age</string>

    <string name="firstname">First Name</string>

    <string name="lastname">Last Name</string>

    <string name="workout">Enter Workout Name</string>

    <string name="minimum_password">Password must be atleast 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
...
    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="settings_name">Account Settings</string>

    <string name="profile_update_successful">Successfully updated user information!</string>


    -<string-array name="muscle_categories">

    <item>Chest</item>

...
