...
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlue" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/update_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/roundbutton"
                    android:text="@string/action_update"
                    android:textColor="@color/colorWhite"
...
